# empathic-bot

./: .dockerignore  .env.example  .env.production  .gitignore  .vercelignore  DEPLOY.md  LOCAL_DEV.md  MEMORY.md  MIGRATION.md  Makefile  OPTIMIZATION_REPORT.md  README.md  TOOLS.md  docker-compose.prod.yml  docker-compose.yml  railway.toml  test_1000.py  test_personas.py  vercel.json
.github/workflows/: deploy.yml
.openclaw/: workspace-state.json
.railway/: app.json
benchmark_results/: report_20260412_141359.json  report_20260412_141631.json  report_20260412_141838.json  report_20260412_141939.json  report_20260412_142038.json  report_20260412_142126.json  report_20260412_142204.json  report_20260412_142423.json  report_20260412_153516.json  report_20260412_153908.json
frontend/: index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  types.ts  useTheme.ts
gateway/: Dockerfile  go.mod  main.go
java_service/: Dockerfile  pom.xml
memory/: 2026-04-12.md  2026-04-14.md  2026-04-28.md
memory-benchmark/: conversation_generator.py  detailed_trace.py  enhanced_trace.py  generate_full_report.py  memory_interface.py  memory_systems_v2.py  report_generator.py  run_benchmark.py  run_benchmark_v2.py
python_service/: Dockerfile  auth.py  benchmark.py  benchmark_llm.py  config.example.py  main.py  memory.py  pyproject.toml  scheduler_service.py  tool_registry.py  user_profile.py
python_service/memory/user_tools/: tool_registry.json
scripts/: ai-news-updater.sh
shared/: emotions.json  memory_levels.json
(+46 files in other folders)
