[project]
name = "empathic-chat-service"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "openai>=1.3.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.2",
    "redis>=5.0.0",
    "pydantic>=2.0.0",
    "sse-starlette>=1.8.0",
    "bcrypt>=4.1.0",
]
